@@ -7,7 +7,7 @@ body
 
 #header
   background: url(../../images/header-bg.png) no-repeat 150px 0
-  height: 100px
+  height: 80px
   margin-top: 30px
   position: relative
 
@@ -17,10 +17,13 @@ body
     padding: 5px
     position: absolute
     bottom: 10px
-    left: 20px
+    right: 20px
 
     ul
       +horizontal-list
+
+      li
+        padding-right: 15px
 
       a
         color: #474e55
@@ -43,6 +46,7 @@ body
   .logo
     float: left
     margin-left: 20px
+    height: 100px
 
     a
       h1
