@@ -15,7 +15,7 @@ body {
 /* line 8, ../../../app/stylesheets/_layout.sass */
 #header {
   background: url(../../images/header-bg.png) no-repeat 150px 0;
-  height: 100px;
+  height: 80px;
   margin-top: 30px;
   position: relative;
 }
@@ -25,7 +25,7 @@ body {
   padding: 5px;
   position: absolute;
   bottom: 10px;
-  left: 20px;
+  right: 20px;
 }
 /* line 22, ../../../app/stylesheets/_layout.sass */
 #header .navigation ul {
@@ -60,13 +60,17 @@ body {
   padding-right: 0px;
 }
 /* line 25, ../../../app/stylesheets/_layout.sass */
+#header .navigation ul li {
+  padding-right: 15px;
+}
+/* line 28, ../../../app/stylesheets/_layout.sass */
 #header .navigation ul a {
   color: #474e55;
   font-size: 0.9em;
   font-weight: bold;
   text-transform: uppercase;
 }
-/* line 32, ../../../app/stylesheets/_layout.sass */
+/* line 35, ../../../app/stylesheets/_layout.sass */
 #header .user {
   background: white;
   padding: 5px;
@@ -77,7 +81,7 @@ body {
   -moz-border-radius: 12px;
   -webkit-border-radius: 12px;
 }
-/* line 40, ../../../app/stylesheets/_layout.sass */
+/* line 43, ../../../app/stylesheets/_layout.sass */
 #header .user ul {
   margin: 0;
   padding: 0;
@@ -109,12 +113,13 @@ body {
 #header .user ul li:last-child, #header .user ul li.last {
   padding-right: 0px;
 }
-/* line 43, ../../../app/stylesheets/_layout.sass */
+/* line 46, ../../../app/stylesheets/_layout.sass */
 #header .logo {
   float: left;
   margin-left: 20px;
+  height: 100px;
 }
-/* line 48, ../../../app/stylesheets/_layout.sass */
+/* line 52, ../../../app/stylesheets/_layout.sass */
 #header .logo a h1 {
   text-indent: -9999em;
   overflow: hidden;
@@ -126,37 +131,37 @@ body {
   height: 84px;
 }
 
-/* line 53, ../../../app/stylesheets/_layout.sass */
+/* line 57, ../../../app/stylesheets/_layout.sass */
 .content-wrapper {
   background: url(../../images/main-content-bg.png) top no-repeat;
 }
 
-/* line 56, ../../../app/stylesheets/_layout.sass */
+/* line 60, ../../../app/stylesheets/_layout.sass */
 #main-content {
   margin-top: 20px;
 }
 
-/* line 61, ../../../app/stylesheets/_layout.sass */
+/* line 65, ../../../app/stylesheets/_layout.sass */
 #sidebar .content .login {
   margin-top: 30px;
 }
-/* line 64, ../../../app/stylesheets/_layout.sass */
+/* line 68, ../../../app/stylesheets/_layout.sass */
 #sidebar .content .login .description {
   font-size: 1.1em;
 }
-/* line 67, ../../../app/stylesheets/_layout.sass */
+/* line 71, ../../../app/stylesheets/_layout.sass */
 #sidebar .content .user {
   background: #bfd9e6;
   margin-top: 30px;
   padding: 15px;
   width: 242px;
 }
-/* line 73, ../../../app/stylesheets/_layout.sass */
+/* line 77, ../../../app/stylesheets/_layout.sass */
 #sidebar .content .user .options {
   background: white;
   padding: 5px;
 }
-/* line 77, ../../../app/stylesheets/_layout.sass */
+/* line 81, ../../../app/stylesheets/_layout.sass */
 #sidebar .content .user .options img {
   border: 1px dotted #9dc2d5;
   float: left;
@@ -164,32 +169,32 @@ body {
   width: 48px;
   height: 48px;
 }
-/* line 86, ../../../app/stylesheets/_layout.sass */
+/* line 90, ../../../app/stylesheets/_layout.sass */
 #sidebar .content .user .options .greeting {
   color: #04abe2;
   font-weight: bold;
   padding-left: 60px;
 }
-/* line 91, ../../../app/stylesheets/_layout.sass */
+/* line 95, ../../../app/stylesheets/_layout.sass */
 #sidebar .content .user .options .greeting a {
   color: #04abe2;
 }
-/* line 94, ../../../app/stylesheets/_layout.sass */
+/* line 98, ../../../app/stylesheets/_layout.sass */
 #sidebar .content .user .options .links {
   font-size: 0.85em;
   padding-left: 60px;
 }
-/* line 98, ../../../app/stylesheets/_layout.sass */
+/* line 102, ../../../app/stylesheets/_layout.sass */
 #sidebar .content .user .options .links a {
   color: black;
 }
 
-/* line 108, ../../../app/stylesheets/_layout.sass */
+/* line 112, ../../../app/stylesheets/_layout.sass */
 #footer {
   background: #bfd9e6;
   min-height: 60px;
 }
-/* line 112, ../../../app/stylesheets/_layout.sass */
+/* line 116, ../../../app/stylesheets/_layout.sass */
 #footer .wrapper {
   margin-left: auto;
   margin-right: auto;
@@ -199,7 +204,7 @@ body {
   width: 960px;
   .right-float: right;
 }
-/* line 120, ../../../app/stylesheets/_layout.sass */
+/* line 124, ../../../app/stylesheets/_layout.sass */
 #footer .wrapper .left {
   float: left;
   text-align: left;
